# raytracer_in_a_weekend

./: Cargo.toml  README.md
inputs/: scene.json
src/: cache.rs  camera.rs  item.rs  lib.rs  main.rs  ray_tracer.rs  scene.rs  sky_box.rs  tone_mapper.rs  util.rs
src/bvh/: aabb.rs  mod.rs
src/geometry/: mod.rs  plane.rs  scene.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  light.rs  metal.rs  mod.rs  util.rs
src/primitive/: mod.rs  ray3.rs  vec3.rs
src/sky_box/: cubemap.rs  equirectangular.rs  mod.rs
src/texture/: image.rs  linear_gradient.rs  mod.rs  solid.rs
