[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nishant Mahajan <nishant.mahajanXVII@gmail.com>"]
edition = "2018"

[dependencies]
impl_ops = "0.1.1"
indicatif = {version = "0.15.0", features = ["rayon"]}
png = "0.16.8"
rand = "0.7.3"
rayon = "1.5.0"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
