[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nishant Mahajan <nishant.mahajanXVII@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "3.0.5", features = ["derive"]}
glam = {version = "0.20.3", features = ["serde"]}
image = {version = "0.23.14", default-features = false, features = ["jpeg", "png"]}
indicatif = {version = "0.15.0", features = ["rayon"]}
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.5.0"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = "1.0.74"
